# wav2vec-heart-sounds

./: .gitignore  CITATION.cff  LICENSE  README.md  Readme.md  pyproject.toml
classifier/: Dockerfile  Readme.md  get_best.sh  get_best_16k.sh  get_best_16k_no_augment.sh  get_best_cinc.sh  get_best_cinc_16k.sh  get_best_cinc_8k.sh  get_best_cinc_cnn.sh  get_best_cnn.sh  get_best_ecg.sh  get_best_pcg.sh  pre_train.sh  requirements.txt  train.sh
classifier/src/matlab/: Homomorphic_Envelope_with_Hilbert.m  Training_PCG_ECG.m  butterworth_high_pass_filter.m  butterworth_low_pass_filter.m  ecgpcg_classify.m  getHeartRateSchmidt.m  getSpringerPCGFeatures.m  get_duration_distributions.m  get_states.m  normalise_signal.m  parms_cnn_Rong_A_ecg.mat  parms_cnn_Rong_A_ecg1.mat  schmidt_spike_removal.m  segmentation.m  (+2 more)
data/: gen_config_rnn_cinc.json  gen_config_rnn_diffwave_only.json  gen_config_rnn_paper_training_a.json  gen_config_rnn_wavegrad_only.json
diffusion/: requirements.txt  requirements.txt.pinned
diffusion/notes/: PMEA_37_12_2181_OnlineAppendix.xlsx  ewttesting.py  quickjunk.py  splinething.py
diffusion/scripts/: runvast.sh
diffusion/src/: main.py
docs/: DATA.md  REPRODUCE.md
scripts/: run_ablations.sh  run_generators.sh
src/mpcg_wav2vec/: __init__.py  cli.py  config.py  reporting.py
tests/: test_classify.py  test_datasets_and_schedule.py  test_generated.py  test_generative.py  test_heart_cycles.py  test_losses.py  test_reference_regime.py  test_signalproc.py  test_splits_and_reporting.py  test_torchaug.py  test_vest_loader.py
(+89 files in other folders)
